fix shtml references

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <!-- header start-->
 <div id="header-wrap"><div id="header" class="container_16">
-<h1 id="logo-text"><a href="index.shtml" title="">MIDI Software</a></h1>		
+<h1 id="logo-text"><a href="index.html" title="">MIDI Software</a></h1>		
 <p id="intro">by Pedro Lopez-Cabanillas</p>
 <!-- navigation -->
 <div  id="nav">
 <ul>
-<li id="current"><a href="index.shtml">Home</a></li>
-<li><a href="projects.shtml">Projects</a></li>
+<li id="current"><a href="index.html">Home</a></li>
+<li><a href="projects.html">Projects</a></li>
 <li><a href="https://midi-clorianos.blogspot.com">Blog</a></li>
 </ul>
 </div>
@@ -55,7 +55,7 @@
 <div class="sidemenu">	
 <h3>Quick Links</h3>
 <ul>
-<li><a href="index.shtml">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="https://midi-clorianos.blogspot.com">Blog</a></li>
 <li><a href="https://drumstick.sourceforge.io">Drumstick Libraries</a></li>
 <li><a href="https://dmidiplayer.sourceforge.io">Drumstick Multiplatform MIDI File Player</a></li>
@@ -99,8 +99,8 @@
 Design by : <a href="http://www.styleshout.com/">styleshout</a>	
 </p>
 <p class="bottom-right" >
-<a href="index.shtml">Home</a> |
-<a href="projects.shtml">Projects</a> |
+<a href="index.html">Home</a> |
+<a href="projects.html">Projects</a> |
 <a href="https://jigsaw.w3.org/css-validator/check/referer">CSS</a> |
 <a href="https://validator.w3.org/check/referer">XHTML</a>
 </p>
