--- a/footer.html
+++ b/footer.html
@@ -7,8 +7,8 @@
 Design by : <a href="http://www.styleshout.com/">styleshout</a>	
 </p>
 <p class="bottom-right" >
-<a href="index.shtml">Home</a> |
-<a href="projects.shtml">Projects</a> |
+<a href="index.html">Home</a> |
+<a href="projects.html">Projects</a> |
 <a href="https://jigsaw.w3.org/css-validator/check/referer">CSS</a> |
 <a href="https://validator.w3.org/check/referer">XHTML</a>
 </p>
